[gd_scene load_steps=4 format=2]

[ext_resource path="res://Source/GameModeMenu/GameModeMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/hover.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Themes/Main/theme.tres" type="Theme" id=3]

[node name="GameModeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -50.0
margin_right = 65.0
margin_bottom = 50.0
alignment = 1

[node name="PvPButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 130.0
margin_bottom = 48.0
theme = ExtResource( 3 )
text = "PvP"

[node name="PvAIButton" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 130.0
margin_bottom = 73.0
theme = ExtResource( 3 )
text = "PvAI"
